# jambler

./: .travis.yml  Cargo.toml  README.md
benches/: main_benchmark.rs
src/: ble_algorithms.rs  deduction.rs  jambler.rs  jambler_master.rs  lib.rs  master.rs  slave.rs
src/ble_algorithms/: access_address.rs  crc.rs  csa2.rs  util.rs  whitening.rs
src/deduction/: brute_force.rs  control.rs  deducer.rs  distributions.rs
src/jambler/: deduction.rs  hardware_traits.rs  state.rs
src/jambler/deduction/: brute_force.rs  control.rs  deducer.rs  distributions.rs  processing.rs
src/jambler/state/: calibrate_interval_timer.rs  discover_aas.rs  harvest_packets.rs  idle.rs
src/slave/: hardware_traits.rs  state.rs
src/slave/state/: follow.rs  harvest.rs  idle.rs
